🗿 added full explanation

--- a/env.example
+++ b/env.example
@@ -58,3 +58,5 @@ CHECK_TOKEN_BALANCES=true
 # ⚠️ PENTING: 
 # - JANGAN PERNAH mengupload file .env ke GitHub!
 # - Gunakan env.sample ini sebagai referensi untuk mengatur file .env asli.
+# - ditermux ketik nano .env dan paste bagian diatas lengkap. 
+kenapa berbeda karena ini konfigurasi untuk cancel-nounce.js jika terjadi pending transaksi!
